syntax = "proto3";

package getArea;

option go_package = "./proto;getArea";

service GetArea {
	rpc MicroGetArea(Request) returns (Response) {}
}

message Request {
}

message Response {
	string errCode = 1;
	repeated AreaInfo data = 2;
}

message AreaInfo{
	int32 aid = 1;
	string aname = 2;
}
